routes-auth-and-user
Criação, de rotas, controllers, services e tests, das rotas auth e users
